backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1  # Mantén 2 réplicas para alta disponibilidad
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: nicolasortiz05/back-taller:1.1  # Verifica que la imagen esté en Docker Hub
        ports:
          - containerPort: 8080
        startupProbe:
          httpGet:
            path: /api/datos
            port: 8080
          initialDelaySeconds: 25
          periodSeconds: 10
          failureThreshold: 3
