front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  labels:
    app: front
spec:
  replicas: 1  # Puedes aumentar si necesitas más disponibilidad
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: nicolasortiz05/front-taller:1.5
        ports:
          - containerPort: 80
