dev-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapihelm-dev-external
  namespace: default
spec:
  type: ExternalName
  externalName: myapihelm-dev.desarrollo.svc.cluster.local
