front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  selector:
    app: front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP  # Solo accesible dentro del clúster, se expone con Ingress
